# PEA1_Project

./: CMakeLists.txt  README.md  TODO.md  a.out  functions.cpp  functions.h  main.cpp  post.cpp  post.sh  pseudo.txt
templates/: CFL.tpp  Mesh.hpp  NumericalSolver.hpp
utils/: BoundaryConditions.hpp  BoundaryConditions.tpp  GeneralVector.hpp  InitialConditions.hpp  Initialconditioins.hpp  Mesh.hpp  NumericalSchemes.hpp  SimulationInfo.hpp
